--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,8 +33,13 @@
   bottom: 48px;
   right: 0px;
 }
+.absolute-tilelayer {
+  position: absolute;
+  bottom: 48px;
+  right: 0px;
+}
 .height-visor {
-  height: 21.5rem;
+  height: 26.7rem;
 }
 .width-creditos {
   width: 100%;
@@ -42,6 +47,7 @@
 .height-section {
   height: auto;
 }
+
 @media (min-width: 768px) {
   .height {
     height: 35rem;
@@ -67,12 +73,20 @@
     height: 20rem;
     width: 100%;
   }
+  .height-visor {
+    height: 26.7rem;
+  }
   .absolute-capas {
     position: absolute;
     bottom: 58px;
     right: 12px;
   }
   .absolute-leyenda {
+    position: absolute;
+    bottom: 58px;
+    right: 12px;
+  }
+  .absolute-tilelayer {
     position: absolute;
     bottom: 58px;
     right: 12px;
@@ -125,6 +139,11 @@
   .absolute-leyenda {
     position: absolute;
     top: 56px;
+    right: 62px;
+  }
+  .absolute-tilelayer {
+    position: absolute;
+    top: 100px;
     right: 62px;
   }
   .height-visor {
