--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,13 @@
 /* BREAKPOINTS */
+html,
+body,
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 .height {
   height: auto;
 }
@@ -175,7 +184,7 @@
 /* CSS-GLOBAL */
 
 .opacity {
-  background: rgba(20, 20, 20, 0.7);
+  background: rgba(20, 20, 20, 0.9);
 }
 .opacity-image {
   background: rgba(20, 20, 20, 0.7);
