--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,10 +16,10 @@ body,
   width: 100%;
 }
 .height-image {
-  height: 20rem;
+  height: 201rem;
 }
 .width-image {
-  width: 60rem;
+  width: 100%rem;
 }
 .width-perfil {
   width: 100%;
@@ -29,7 +29,7 @@ body,
   height: 27rem;
 }
 .panam {
-  height: 20rem;
+  height: 21rem;
   width: 100%;
 }
 .absolute-capas {
@@ -79,7 +79,7 @@ body,
     width: 20rem;
   }
   .panam {
-    height: 20rem;
+    height: 25rem;
     width: 100%;
   }
   .height-visor {
@@ -172,7 +172,7 @@ body,
   }
   .panam {
     height: 44rem;
-    width: 60em;
+    width: 60rem;
   }
   .height-image {
     height: 44rem;
