--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,10 +16,10 @@ body,
   width: 100%;
 }
 .height-image {
-  height: 201rem;
+  height: 20rem;
 }
 .width-image {
-  width: 100%rem;
+  width: 100%;
 }
 .width-perfil {
   width: 100%;
@@ -29,7 +29,7 @@ body,
   height: 27rem;
 }
 .panam {
-  height: 21rem;
+  height: 20rem;
   width: 100%;
 }
 .absolute-capas {
